# SzamBiztHF

./: README.md  codeql-analysis.yml  sonar-project.properties
.github/workflows/: buildALL.yml  buildcpp.yml  buildjava  buildjava.yml  cmake.yml  codeql-analysis.yml
CAFFparser/: CMakeLists.txt  Readme.md  SzamitogeBiztonsag  build.gradle  main.cpp  settings.gradle  sonar-project.properties
CAFFparser/CiffCaffStuff/: CIFF.cpp  CIFF.h
CAFFparser/CiffCaffStuff/CAFF/: Block.h  CAFF.h  CaffAnim.cpp  CaffAnim.h  CaffCredits.cpp  CaffCredits.h  CaffHeader.h
CAFFparser/NativeLibrary/com/narcano/jni/: CAFF.h  CAFF.java  CAFFparser.cpp  CIFF.java  CIFFparser.cpp  CIFFparser.h  CaffAnim.cpp  CaffAnim.h  CaffCredits.h  CaffParser.java  Readme.md  com_narcano_jni_CaffParser.cpp  com_narcano_jni_CaffParser.h  run.sh  winUbuntu.sh  win_run.sh  win_run.sh.bak
CAFFparser/Parsers/: CAFFparser.cpp  CAFFparser.h  CIFFparser.cpp  CIFFparser.h
CAFFparser/app/src/main/cpp/: app.cpp
CAFFparser/app/src/main/headers/: app.h
CAFFparser/app/src/test/cpp/: app_test.cpp
ClientApp/: .gitignore  README.md  build.gradle  local.properties  settings.gradle
ClientApp/app/: build.gradle  local.properties
DrawioFiles/: DataFlow.drawio  UseCaseUser.drawio  kornyezetidiagram.drawio
app/SzambiztHfApplibrary/: build.gradle
app/caffadminapp/: build.gradle
backend/backend/: Readme.md  build.gradle  settings.gradle
plans/Sequence Diagrams/: Readme.md  user_call_login.drawio  user_call_register.drawio
plans/UML_Drawio/: DataFlow.drawio  UseCaseAdmin.drawio  UseCaseUser.drawio  (+9 more)
(+177 files in other folders)
